fixed edit post z-index

--- a/components/admin/EditPanel/editPanel.module.css
+++ b/components/admin/EditPanel/editPanel.module.css
@@ -6,6 +6,7 @@
   height: fit-content;
   padding: 2em;
   position: fixed;
+  z-index: 100;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
